--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "drizzle-orm": "^0.43.1",
     "framer-motion": "^12.15.0",
     "imagekit": "^6.0.0",
+    "imagekitio-next": "^1.0.1",
     "install": "^0.13.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
