--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.1",
-    "@heroui/button": "^2.2.19",
-    "@heroui/card": "^2.2.18",
-    "@heroui/divider": "^2.2.13",
-    "@heroui/input": "^2.4.19",
-    "@heroui/system": "^2.4.15",
-    "@heroui/theme": "^2.4.15",
     "@hookform/resolvers": "^5.0.1",
     "@imagekit/next": "^2.1.2",
     "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "framer-motion": "^12.15.0",
@@ -34,6 +32,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.36"
   },
@@ -48,6 +47,7 @@
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
+    "tw-animate-css": "^1.3.3",
     "typescript": "^5"
   }
 }
